--- a/sections/3/embedded_systems.tex
+++ b/sections/3/embedded_systems.tex
@@ -20,7 +20,7 @@ They have the following components:
 
 \subsection{Event Loops}
 
-This term is \emph{not necessarily in your syllabus}, but is the name for how these devices function.
+This term is \emph{not necessarily in your syllabus}, but is the name for how these devices function. In that case, it is called a \emph{monitoring system.}
 
 Embedded systems typically runs instructions in a constant loop with the same structure, which is as follows:
 
@@ -43,7 +43,6 @@ Some other notes include:
 
 \begin{itemize}
     \item Data from sensors that provide \emph{analog data} will likely go through an ADC as a part of processing.
-    \item All of this stuff is also called a \textbf{monitoring system}, which they will more likely use in the exam.
     \item For more case studies, check the relevant sections in the textbook.
 \end{itemize}
 
