fix(ch3): dram/sram power consumption note

--- a/sections/3/data_storage.tex
+++ b/sections/3/data_storage.tex
@@ -61,7 +61,7 @@ Benefits of DRAM include:
 
 \begin{itemize}
     \item Much cheaper to make than SRAM
-    \item Consume less power on average
+    \item Consume less power
     \item They hold a larger total capacity (typically)
     \item DRAM in computers are upgradable in many cases. Modern laptops do not allow you to do so for the most part, but all desktops and some older laptops allow you to remove and exchange DRAM easily for upgrades/repairs.
 \end{itemize}
@@ -81,7 +81,6 @@ Benefits of SRAM include:
 
 \begin{itemize}
     \item Much faster than DRAM due to less latency\footnote{Delay.}
-    \item Consumes less power
     \item Does not need to be constantly refreshed
 \end{itemize}
 
