fix(ch3): PC stores the next instruction, not the current

--- a/sections/3/von_neumann.tex
+++ b/sections/3/von_neumann.tex
@@ -59,7 +59,7 @@ The ALU or the Arithmetic Logic Unit is responsible for performing all mathemati
 Registers, like RAM is for fast data storage. The main difference between registers and main memory is that registers are built into the CPU itself. Registers store very little data, typically only 64 bit integers; but are much, much faster than main memory. They also typically serve special purposes. In the diagram, there are 5 important registers that are important for CPU operation.
 
 \begin{itemize}
-    \item \textbf{The Program Counter (PC)} is a special register that stores the \emph{address} of the current instruction that is being run by the CPU.
+    \item \textbf{The Program Counter (PC)} is a special register that stores the \emph{address} of the next instruction to be executed on the CPU.\footnote{This is because on the fetch stage, it fetches the current instruction at the PC's address, but is incremented immediately after. Therefore, when the next instruction must be run, which becomes the current address, its address is in the PC.}
 \item \textbf{The Accumulator} is another special register in the CPU that stores intermediate results of arithmetic or logical operations, like the result of $3+5$ or {\ccmono 1 OR 0}. It can accumulate data over time for longer chains of instructions\footnote{In modern CPUs, there is no accumulator. There are so many general-purpose registers that any one can act as an accumulator.}
     \item \textbf{The Current Instruction Register (CIR)} stores the current instruction being executed. This differs from the PC, as the PC stores the \emph{location} of the instruction, whereas the CIR stores the instruction itself.
     \item \textbf{The Memory Address Register (MAR)} stores addresses in memory that must be read from or written to.
