--- a/main.tex
+++ b/main.tex
@@ -94,7 +94,7 @@
 % info
 \title{The IGCSE Computer Science (Theory) Revision Guide}
 
-\author{\textbf{Eason Qin} (eason@ezntek.com), \textbf{Siddharth Harish} (sid.falcon9@gmail.com), \\and \textbf{Karthik Sankar} (karthik@hackclub.com)}
+\author{\textbf{Eason Qin} (eason@ezntek.com),\\\textbf{Siddharth Harish} (sid.falcon9@gmail.com),\\\textbf{Karthik Sankar} (karthik@hackclub.com),\\and \textbf{Ved Jaggi} (ved@vedjaggi.com)}
 \date{May 13th, 2025\\\emph{Fifth Revision}}
 
 % da benin..beningi...benigi..da biningin™ 
