fix: mono font handling, switch to iosevka

--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,6 @@
 \usepackage{graphicx}
 \usepackage{subfiles}
 \usepackage{fancyhdr}
-\usepackage{plex-serif}
 \usepackage{fontspec}
 \usepackage{titlesec}
 \usepackage{minted}
@@ -15,11 +14,10 @@
 \usepackage[table]{xcolor}
 \usepackage{array}
 \usepackage{csquotes}
-\setmonofont{Cascadia Code}
 
-\newfontfamily\ccbold{Cascadia Code Bold}
-\newfontfamily\ccitalic{Cascadia Code Italic}
-\newfontfamily\ccmono{Cascadia Code} % For monospace
+\newfontfamily\mono{Iosevka Fixed Extended} % For monospace
+\setmonofont{Iosevka Fixed Extended}
+\setmainfont{IBM Plex Serif}
 
 \definecolor{lightlightgray}{rgb}{0.95, 0.95, 0.95}
 
