--- a/sections/4/development_environments.tex
+++ b/sections/4/development_environments.tex
@@ -28,7 +28,7 @@ For a more thorough discussion on IDEs, look at page 170 on the textbook.
 
 These are more sophisticated than just text editors, as they have features like syntax highlighting\footnote{"fancy colors".} and coding-specific features. They are not talked about often, as most people just use IDEs. This is also not in the syllabus, but is interesting to know.
 
-Personally, I\footnote{Eason Qin.} use {\ccmono neovim} on Linux, it is based in the terminal. It looks as follows:
+Personally, I\footnote{Eason Qin.} use {\mono neovim} on Linux, it is based in the terminal. It looks as follows:
 
 \begin{figure}[H]
     \centering
