--- a/sections/5/digital_currency.tex
+++ b/sections/5/digital_currency.tex
@@ -59,7 +59,7 @@ However, the issue of trust begins. Nobody can verify any new block, and therefo
 This means that for any hacker to push a malicious block, they must spend a lot of time calculating the large number, working against the entire blockchain. Since the fastest computer on the blockchain probably has more computational power than a regular hacker, it is impossible to out-calculate everybody else's valid proofs of work, meaning that it is impossible to penetrate. This adds the disadvantage of \textbf{slowing down the creation of blocks}, sacrificing time for security.
 
 \begin{itemize}
-    \item Cryptocurrency uses \textbf{cryptography} to verify the integrity of transactions. If Tom felt like a criminal one day, he theoretically could just write, {\ccmono Jerry gives Tom \$1000}. However, through cryptography and digital signatures, these are \textbf{impossible} to fake.
+    \item Cryptocurrency uses \textbf{cryptography} to verify the integrity of transactions. If Tom felt like a criminal one day, he theoretically could just write, {\mono Jerry gives Tom \$1000}. However, through cryptography and digital signatures, these are \textbf{impossible} to fake.
     \item Cryptocurrency is not regulated by any external party. The users of the cryptocurrencies themselves regulate the currency, track and verify the integrity of transactions, etc.
     \item There is no central bank, therefore all transactions are direct, just broadcasted to everybody else.
     \item Every user has access to every transaction on the blockchain.
