--- a/sections/5/the_internet_and_the_www.tex
+++ b/sections/5/the_internet_and_the_www.tex
@@ -29,22 +29,22 @@ Web browsers, or just browsers allows you to view content on the WWW. Browsers i
     \label{fig:url}
 \end{figure}
 
-The \textcolor{red}{protocol} is typically either {\ccmono http} or {\ccmono https}.
+The \textcolor{red}{protocol} is typically either {\mono http} or {\mono https}.
 
-The \textcolor{blue}{domain} (or web address) is the website's name, like {\ccmono google.com}. 
+The \textcolor{blue}{domain} (or web address) is the website's name, like {\mono google.com}. 
 \begin{itemize}
-    \item The domain host (or the subdomain) is what goes before the website's name, like {\ccmono images.} in {\ccmono images.google.com}.
-    \item The domain name, which is {\ccmono google}.
-    \item The domain suffix/domain type, which contains {\ccmono .com}, {\ccmono .net}, etc. Sometimes it is a country code, like {\ccmono .uk}, {\ccmono .us} or {\ccmono .cn}, for example.
+    \item The domain host (or the subdomain) is what goes before the website's name, like {\mono images.} in {\mono images.google.com}.
+    \item The domain name, which is {\mono google}.
+    \item The domain suffix/domain type, which contains {\mono .com}, {\mono .net}, etc. Sometimes it is a country code, like {\mono .uk}, {\mono .us} or {\mono .cn}, for example.
 \end{itemize}
 
 The \textcolor{green}{path} are like the directions leading up to the file that is to be loaded. Here, it is just one thing, but you can have something like:
 
-{\ccmono https://www.cambridgeinternational.org/why-choose-us/benefits-of-a-cambridge-education/}
+{\mono https://www.cambridgeinternational.org/why-choose-us/benefits-of-a-cambridge-education/}
 
-where the path is 2 parts, {\ccmono why-choose-us} and {\ccmono benefits-of-a-cambridge-education}. You can also think of it like sections leading up to a paragraph in a textbook. 
+where the path is 2 parts, {\mono why-choose-us} and {\mono benefits-of-a-cambridge-education}. You can also think of it like sections leading up to a paragraph in a textbook. 
 
-The \textcolor{yellow}{file} is the document or the actual data for the browser to load. It can be an html file or something else, you will see suffixes like {\ccmono .jsp} and {\ccmono .aspx}. It is a lot like files on your hard drive.
+The \textcolor{yellow}{file} is the document or the actual data for the browser to load. It can be an html file or something else, you will see suffixes like {\mono .jsp} and {\mono .aspx}. It is a lot like files on your hard drive.
 
 \subsection{HTTP and HTTPS}
 
