--- a/sections/1/applications_of_hexadecimal.tex
+++ b/sections/1/applications_of_hexadecimal.tex
@@ -15,7 +15,7 @@ There are several applications of the Hexadecimal number system in Computers, wh
 
 \paragraph{Making binary easier to write/represent}
 
-Given long binary sequences, such as {\ccmono 1011101010111110}, programmers may find it much easier to simply express the given example as {\ccmono BABE}, which is 4 characters and not 16 when typing/writing. Converting between the two formats was covered in \hyperref[sec:1-converting-between-bin-den-and-hexadecimal]{this section}.
+Given long binary sequences, such as {\mono 1011101010111110}, programmers may find it much easier to simply express the given example as {\mono BABE}, which is 4 characters and not 16 when typing/writing. Converting between the two formats was covered in \hyperref[sec:1-converting-between-bin-den-and-hexadecimal]{this section}.
 
 \paragraph{OS error codes}
 
@@ -23,7 +23,7 @@ OS error codes are given when a program has an error and must exit. Sometimes, t
 
 \paragraph{MAC addresses}
 
-These uniquely identifies a device on the network. They use 48 bits of data in total (6 segments of 2 nibbles), and look like {\ccmono AA:BB:CC:DD:EE:FF}. Refer to section \ref{2:sec:mac} for details.
+These uniquely identifies a device on the network. They use 48 bits of data in total (6 segments of 2 nibbles), and look like {\mono AA:BB:CC:DD:EE:FF}. Refer to section \ref{2:sec:mac} for details.
 
 \paragraph{IPv6 addresses}
 
@@ -31,6 +31,6 @@ Refer to \ref{2:sec:ipv6} for details.
 
 \paragraph{Color codes}
 
-Color codes are used to represent colors on a computer. They describe the amount that specific colors mix together. Red, Green and Blue are used as the base colors, as they are the additive color primary colors (not yellow!) like {\ccmono \#ffcc00}. 2 nibbles or one byte is used to represent the magnitude of the color itself, from 00-ff. The previous example consists of $FF$ red, $CC$ green and $00$ blue, which produces a yellow color.
+Color codes are used to represent colors on a computer. They describe the amount that specific colors mix together. Red, Green and Blue are used as the base colors, as they are the additive color primary colors (not yellow!) like {\mono \#ffcc00}. 2 nibbles or one byte is used to represent the magnitude of the color itself, from 00-ff. The previous example consists of $FF$ red, $CC$ green and $00$ blue, which produces a yellow color.
 
 \end{document}
