--- a/sections/2/ip_and_mac_addresses.tex
+++ b/sections/2/ip_and_mac_addresses.tex
@@ -11,12 +11,12 @@ IP stands for the Internet Protocol, and IP addresses are like street addresses;
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.7\textwidth]{ip_addresses}
-    \caption{Output from the Linux {\ccmono ip} utility, showing IPv4 and V6 addresses}
+    \caption{Output from the Linux \texttt{ip} utility, showing IPv4 and V6 addresses}
 \end{figure}
 
 \subsection{IPv4 Addresses}
 
-Are \textbf{32-bit values} represented as 4 3-digit numbers with dots between them, like {\ccmono 192.168.0.1} with each value ranging between 0-255. There are 2 tyes of IP addresses, \emph{Public} and \emph{Private} IP addresses.
+Are \textbf{32-bit values} represented as 4 3-digit numbers with dots between them, like {\mono 192.168.0.1} with each value ranging between 0-255. There are 2 tyes of IP addresses, \emph{Public} and \emph{Private} IP addresses.
 
 \begin{figure}[h]
     \centering
@@ -46,16 +46,16 @@ In the IPv4 address range, addresses are reserved for private networks to use, a
     \begin{tabular}{ |c|c|c| }
         \hline
         \textbf{Class} & \textbf{IP Range} & \textbf{Most typically seen in} \\ \hline 
-        A & {\ccmono 10.0.0.0} to {\ccmono 10.255.255.255}     & Large networks \\ \hline
-        B & {\ccmono 172.16.0.0} to {\ccmono 172.31.255.255}   & Medium-sized networks \\ \hline 
-        C & {\ccmono 192.168.0.0} to {\ccmono 192.168.255.255} & Small networks \\
+        A & {\mono 10.0.0.0} to {\mono 10.255.255.255}     & Large networks \\ \hline
+        B & {\mono 172.16.0.0} to {\mono 172.31.255.255}   & Medium-sized networks \\ \hline 
+        C & {\mono 192.168.0.0} to {\mono 192.168.255.255} & Small networks \\
         \hline
     \end{tabular}
     \caption{Table of private IP classes}
     \label{tab:private_ip_classes}
 \end{figure}
 
-Note that you do not need to memorize the class letters nor the exact ranges, you just need to identify them, especially the most common one, class C which is between {\ccmono 192.168.0.0} to {\ccmono 192.168.255.255}.
+Note that you do not need to memorize the class letters nor the exact ranges, you just need to identify them, especially the most common one, class C which is between {\mono 192.168.0.0} to {\mono 192.168.255.255}.
 
 These private IPs belong in a local network, where devices in the same approximate geographical location are connected to a router.
 
@@ -102,7 +102,7 @@ This is by far the most common method.
 \begin{itemize}
     \item If you're connected to a video call or voice call through VoIP\footnote{Basically making phone or video calls through a network and not cell towers.}, if your IP address changes, it may disconnect the call\footnote{It is not necessarily true, as your IP is not jumbled at regular intervals.}.
     \item If your device is old and does not support the DHCP protocol, you cannot use it. In short, it may not support all devices.
-    \item Connection time takes longer, you must send a {\ccmono DHCPLEASE} message to the router for the IP, the router must calculate an IP, and the router must send a {\ccmono DHCPBACK} with your IP. This typically takes 5 seconds but may take up to 25 seconds.
+    \item Connection time takes longer, you must send a {\mono DHCPLEASE} message to the router for the IP, the router must calculate an IP, and the router must send a {\mono DHCPBACK} with your IP. This typically takes 5 seconds but may take up to 25 seconds.
 \end{itemize}
 
 \subsection{IPv6 addresses}
