--- a/sections/4/translators_compilers_and_interpreters.tex
+++ b/sections/4/translators_compilers_and_interpreters.tex
@@ -68,7 +68,7 @@ and translates it into machine code that can be used in the fetch-decode-execute
 00000020: 0000 0000 0000 0000                      ........
 \end{minted}
 
-(output from the {\ccmono xxd} utility)
+(output from the {\mono xxd} utility)
 
 However, hexadecimal is hard to read, so programmers programming directly for the CPU use assembly. They can manipulate the fetch-decode-execute cycle directly and do exact things with the CPU, while writing in a better language than straight-up binary/hexadecimal.
 
