revert to plex-serif package

--- a/main.tex
+++ b/main.tex
@@ -14,10 +14,11 @@
 \usepackage[table]{xcolor}
 \usepackage{array}
 \usepackage{csquotes}
+\usepackage{plex-serif}
 
 \newfontfamily\mono{Iosevka Fixed Extended} % For monospace
 \setmonofont{Iosevka Fixed Extended}
-\setmainfont{IBM Plex Serif}
+%\setmainfont{IBM Plex Serif}
 
 \definecolor{lightlightgray}{rgb}{0.95, 0.95, 0.95}
 
